Fixed buttons on mobile.

--- a/SPWebApplication/SPFrontEndAngular/app/style/src/buttons.less
+++ b/SPWebApplication/SPFrontEndAngular/app/style/src/buttons.less
@@ -8,6 +8,10 @@
     margin-top: 20px;
 }
 
+.btn-cap-margin-bottom {
+    margin-bottom: 15px;
+}
+
 .btn-cap-block {
     display: inline-block;
     width: 100%;
@@ -59,4 +63,18 @@
     color: #c9302c;
     border: 1px solid #c9302c;
     background-color: white;
+}
+
+@media screen and (max-width: 480px) {
+    .btn-cap {
+        padding-left: 8px;
+        padding-right: 8px;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .btn-cap {
+        padding-left: 4px;
+        padding-right: 4px;
+    }
 }
